Example fix: use createjs_ui.combined instead of all single files for the examples

--- a/example/button.html
+++ b/example/button.html
@@ -4,12 +4,7 @@
         <title>Basic Button test example (the 'hello world' in UI development)</title>
         <script src="../lib/createjs-2014.12.12.min.js"></script>
 
-        <script src="../src/util/ScaleBitmap.js"></script>
-        <script src="../src/core/Control.js"></script>
-        <script src="../src/controls/Button.js"></script>
-        <script src="../src/shapes/Shape.js"></script>
-        <script src="../src/shapes/Rect.js"></script>
-        <script src="../src/skin/Theme.js"></script>
+        <script src="../lib/createjs_ui-0.0.1.combined.js"></script>
         <script src="../themes/AeonTheme.js"></script>
         <script src="../themes/ShapeTheme.js"></script>
 
