--- a/example/layout.html
+++ b/example/layout.html
@@ -3,20 +3,8 @@
 <head>
     <title>Layout test</title>
     <script src="../lib/createjs-2014.12.12.min.js"></script>
-
-    <script src="../src/util/ScaleBitmap.js"></script>
-    <script src="../src/layout/Layout.js"></script>
-    <script src="../src/layout/ViewPortBounds.js"></script>
-    <script src="../src/layout/LayoutAlignment.js"></script>
-    <script src="../src/layout/HorizontalLayout.js"></script>
-    <script src="../src/layout/VerticalLayout.js"></script>
-
-    <script src="../src/core/Control.js"></script>
-    <script src="../src/controls/Button.js"></script>
-    <script src="../src/controls/LayoutGroup.js"></script>
-    <script src="../src/shapes/Shape.js"></script>
-    <script src="../src/shapes/Rect.js"></script>
-    <script src="../src/skin/Theme.js"></script>
+    <script src="../lib/createjs_ui-0.0.1.combined.js"></script>
+    
     <script src="../themes/AeonTheme.js"></script>
     <script src="../themes/ShapeTheme.js"></script>
 
