read config from build-json file

--- a/tests/_SpecRunner.html
+++ b/tests/_SpecRunner.html
@@ -26,6 +26,10 @@
   
   <script src="../src/util/ScaleBitmap.js"></script>
   
+  <script src="../src/util/ScaleBitmap.js"></script>
+  
+  <script src="../src/util/mouseWheelSupport.js"></script>
+  
   <script src="../src/skin/Theme.js"></script>
   
   <script src="../src/layout/ViewPortBounds.js"></script>
@@ -40,9 +44,9 @@
   
   <script src="../src/layout/TiledLayout.js"></script>
   
-  <script src="../src/layout/TiledColumnsLayout.js"></script>
-  
   <script src="../src/layout/TiledRowsLayout.js"></script>
+  
+  <script src="../src/layout/TiledColumnsLayout.js"></script>
   
   <script src="../src/core/Control.js"></script>
   
@@ -50,11 +54,15 @@
   
   <script src="../src/shapes/Rect.js"></script>
   
+  <script src="../src/shapes/Ellipse.js"></script>
+  
   <script src="../src/controls/Button.js"></script>
   
   <script src="../src/controls/ToggleButton.js"></script>
   
   <script src="../src/controls/LayoutGroup.js"></script>
+  
+  <script src="../src/controls/ScrollArea.js"></script>
   
   <script src="../themes/ShapeTheme.js"></script>
   
