ScrollArea bug reproduced

--- a/example/layout_scroll_area.html
+++ b/example/layout_scroll_area.html
@@ -4,6 +4,7 @@
     <title>Layout test</title>
     <script src="../lib/createjs-2014.12.12.min.js"></script>
     <script src="../lib/createjs_ui-0.0.1.combined.js"></script>
+    <script src="../src/controls/ScrollArea.js"></script>
     
     <script src="../themes/AeonTheme.js"></script>
     <script src="../themes/ShapeTheme.js"></script>
