use Application in examples

--- a/example/scrollbar.html
+++ b/example/scrollbar.html
@@ -23,7 +23,7 @@
         var stage;
         function init() {
             stage = new createjs.Stage("test_canvas");
-            new LayoutScrollAreaExample(stage);
+            new ScrollBarExample(stage);
         }
     </script>
 </head>
