scrollbar, get alignment from ScrollArea content (WIP)

--- a/tests/_SpecRunner.html
+++ b/tests/_SpecRunner.html
@@ -30,6 +30,8 @@
   
   <script src="../src/util/mouseWheelSupport.js"></script>
   
+  <script src="../src/util/resizeSupport.js"></script>
+  
   <script src="../src/skin/Theme.js"></script>
   
   <script src="../src/layout/ViewPortBounds.js"></script>
@@ -56,11 +58,17 @@
   
   <script src="../src/shapes/Ellipse.js"></script>
   
+  <script src="../src/shapes/Diamond.js"></script>
+  
+  <script src="../src/controls/Application.js"></script>
+  
   <script src="../src/controls/Button.js"></script>
   
   <script src="../src/controls/ToggleButton.js"></script>
   
   <script src="../src/controls/LayoutGroup.js"></script>
+  
+  <script src="../src/controls/ScrollBar.js"></script>
   
   <script src="../src/controls/ScrollArea.js"></script>
   
