--- a/example/scroller.html
+++ b/example/scroller.html
@@ -8,6 +8,8 @@
     <script src="../themes/AeonTheme.js"></script>
     <script src="../themes/ShapeTheme.js"></script>
 
+    <script src="../src/controls/ScrollArea.js"></script>
+
     <script src="js/ScrollerExample.js"></script>
     <style>
         canvas {
