Bugfix for mouseWheelSupport (dispatch on all targets) Update toggle-button test

--- a/tests/_SpecRunner.html
+++ b/tests/_SpecRunner.html
@@ -70,6 +70,8 @@
   
   <script src="../src/controls/ScrollBar.js"></script>
   
+  <script src="../src/controls/ScrollThumb.js"></script>
+  
   <script src="../src/controls/ScrollArea.js"></script>
   
   <script src="../themes/ShapeTheme.js"></script>
