--- a/tests/_SpecRunner.html
+++ b/tests/_SpecRunner.html
@@ -94,6 +94,8 @@
   
   <script src="spec/TiledLayoutSpec.js"></script>
   
+  <script src="spec/ToggleButtonSpec.js"></script>
+  
   <script src=".grunt/grunt-contrib-jasmine/reporter.js"></script>
   
 
